test/mutation_analysis/s0405_convert_a_number_to_hexadecimal/hafis/o3/mutants/6/result.txt
./test/mutation_analysis/s0405_convert_a_number_to_hexadecimal/hafis/o3/mutants/6/Solution.java:26: error: unreachable statement
        return sb.reverse().toString();
        ^
1 error
